--- a/上司レビュー直し箇所.md
+++ b/上司レビュー直し箇所.md
@@ -14,7 +14,7 @@ productForm-ImageUrlについて、String型じゃなくて、マルチパット
 - [x] serviceパッケージ
 インターフェースの追加
 
-- [ ] URLの修正
+- [x] URLの修正
 例http://localhost:8080/registerproductcategory/complete→http://localhost:8080/back/registerproductcategory/complete
 理由：バックエンド用は社員用だから社員にとってわかりやすくしてほしいから
 逆にフロントエンド側はシンプルな名前でいいよ
