--- a/上司レビュー直し箇所.md
+++ b/上司レビュー直し箇所.md
@@ -20,10 +20,10 @@ productForm-ImageUrlについて、String型じゃなくて、マルチパット
 逆にフロントエンド側はシンプルな名前でいいよ
 結合ｔｅｓｔに書いてあるＵＲＬも変更してね
 
-- [ ] controller
+- [x] controller
 logoutcontrollerを削除して、loginコントローラーとmenuコントローラーを作成すること
 
-- [ ] logoutのリダイレクトもう一往復（詳しくは高良が対応）
+- [x] logoutのリダイレクトもう一往復（詳しくは高良が対応）
 
 - [ ] 結合ｔｅｓｔ
 確認と完了にＣＳＲＦ対策項目が欲しい
