--- a/上司レビュー直し箇所.md
+++ b/上司レビュー直し箇所.md
@@ -2,7 +2,7 @@
 - [x] entityパッケージ
 テーブル名とあわせるため、名前を省略してほしくない（Emp→Employeeに変更してほしい/prod→product）
 
-- [　] formパッケージ
+- [x] formパッケージ
 productForm-ImageUrlについて、String型じゃなくて、マルチパットファイル型に変更してほしい
 - [x] フォームのクラス名について
 ＦormProduct？なのかＰroductFormなのか統一してほしい
