商品カテゴリー追加機能のバリデーション追加

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -5,8 +5,10 @@ productForm.quantity=在庫数
 productForm.file=画像
 employeeForm.empAccountName=アカウント名
 employeeForm.empAccountPassword=パスワード
-com.fullness.ec.EmployeeForm.message2=この社員は既に登録されています
-com.fullness.ec.EmployeeForm.message1=このアカウントは既に登録されています
+categoryForm.productCategoryName=商品カテゴリ名
+com.fullness.ec.EmployeeForm.message2=この社員は既に登録されています。
+com.fullness.ec.EmployeeForm.message1=このアカウントは既に登録されています。
+com.fullness.ec.CategoryForm.message=この商品カテゴリは既に登録されています。
 com.fullness.ec.ProductForm.message1=商品カテゴリが文房具の場合は単価が30円以上5000円以下にする必要があります。
 com.fullness.ec.ProductForm.message2=商品カテゴリが雑貨の場合は単価が100円以上10000円以下にする必要があります。
 com.fullness.ec.ProductForm.message3=商品カテゴリがパソコン周辺機器の場合は単価が300円以上30000円以下にする必要があります。
