メッセージ修正

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -3,7 +3,7 @@ productForm.price=価格
 productForm.productName=名前
 productForm.quantity=在庫数
 productForm.file=画像
-typeMismatch.price=価格は0以上999999999以下の数字で入力してください。
+typeMismatch.price=単価は0以上999999999以下の数字で入力してください。
 typeMismatch.quantity=在庫数は0以上1000000以下の数字で入力してください。
 length.productCategoryName=商品カテゴリ名は2文字以上20文字以下で入力してください。
 length.productName=商品名は5文字以上20文字以下で入力してください。
