単体テスト仕様書の編集、商品修正機能の修正

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,7 +1,10 @@
 productForm.cateogoryID=商品カテゴリID
-productForm.price=価格
+productForm.price=単価
 productForm.productName=名前
 productForm.quantity=在庫数
+updateProductForm.price=単価
+updateProductForm.productName=名前
+updateProductForm.quantity=在庫数
 productForm.file=画像
 typeMismatch.price=単価は0以上999999999以下の数字で入力してください。
 typeMismatch.quantity=在庫数は0以上1000000以下の数字で入力してください。
