アカウント登録修正途中

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -12,7 +12,7 @@ customerForm.customerAddress1=住所1
 customerForm.customerAddress2=住所2
 customerForm.customerPhoneNumber=電話番号
 customerForm.customerMailAdress=メールアドレス
-customerForm.customerUserName=アカウント名
+customerForm.customerUsername=アカウント名
 customerForm.customerPassword=パスワード
 length.customerName=氏名は2文字以上20文字以内で入力してください。
 pattern.customerName=氏名は全角半角英数字のみです。
@@ -24,8 +24,8 @@ length.customerPhoneNumber=電話番号は14字以内で入力してください
 length.customerMailAddress=メールアドレスは4文字以上100文字以内で入力してください。
 pattern.customerPhoneNumber=電話番号の形式が正しくありません。例: 12-3456-7890
 pattern.customerMailAddress=メールアドレスの形式が正しくありません。例: example@example.com
-length.customerUserName=アカウント名は5文字以上20文字以内で入力してください。
-pattern.customerUserName=アカウント名は半角英数字のみです。
+length.customerUsername=アカウント名は5文字以上20文字以内で入力してください。
+pattern.customerUsername=アカウント名は半角英数字のみです。
 length.customerPassword=パスワードは5文字以上20文字以内で入力してください。
 pattern.customerPassword=パスワードは半角英数字のみです。
 typeMismatch.price=単価は0以上999999999以下の数字で入力してください。
