--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -16,7 +16,7 @@ customerForm.customerUsername=アカウント名
 customerForm.customerPassword=パスワード
 length.customerName=氏名は2文字以上20文字以内で入力してください。
 pattern.customerName=氏名は全角半角英数字のみです。
-length.customerName=氏名カナは2文字以上20文字以内で入力してください。
+length.customerNameKana=氏名カナは2文字以上20文字以内で入力してください。
 pattern.customerNameKana=氏名カナは全角カタカナのみです。
 length.customerAddress=住所は100文字以内で入力してください。
 pattern.customerAddress=住所は全角半角英数字記号のみです。
